only debug on ansible_verbosity >= 1

--- a/tasks/aix_lvm_createfs.yml
+++ b/tasks/aix_lvm_createfs.yml
@@ -10,6 +10,7 @@
   debug:
     var: lvlist
     verbosity: 1
+  when: ansible_verbosity >= 1
 
 - name: manage_aix_lvm | Creating filesystem mounting point (in case of overmounts)
   file:
